# coffee-scale-app

./: .envrc  .eslintrc.js  .eslintrc.json  .gitignore  .npmrc  .prettierrc  LICENSE  README.md  biome.json  flake.nix  package.json  pnpm-lock.yaml  rome.json  svelte.config.js  tailwind.config.js  vite.config.ts  vue.config.js
.github/: dependabot.yml
coffee-scale-firmware/: Cargo.toml  README.md  diagram.json  wokwi.toml
coffee-scale-firmware/.cargo/: config.toml
coffee-scale-firmware/.devcontainer/: Dockerfile  devcontainer.json
coffee-scale-firmware/scripts/: flash.sh
coffee-scale-firmware/src/: main.rs
firmware/: art.py  ble_advertising.py  ble_scales.py  boot.py  filtering.py  main.py  requirements.in  requirements.txt
old-firmware-unmaintained/: art.py  hx711.py  requirements.in  requirements.txt  ssd1306.py
public/: index.html
rs/: Cargo.toml  README.md  sdkconfig.defaults
rs/.cargo/: config.toml
rs/assets/: README.md  font.raw  hex.raw
rs/src/: battery.rs  ble.rs  critical_section.rs  main.rs  screen.rs  weight.rs
src/: App.vue  app.css  app.d.ts  app.html  custom.scss  main.js  registerServiceWorker.js  service-worker.js  service-worker.ts
src/components/: Battery.vue  Chart.vue  ConnectButton.vue  Gauge.vue  HelloWorld.vue  Logo.vue  Settings.vue  StartButton.vue
src/lib/: bt.svelte.ts  bt.ts  scale.svelte.ts  stores.ts
src/routes/: +layout.svelte  +page.svelte  BatteryLevel.svelte  Chart.svelte  ConnectStartButton.svelte  Form.svelte  Gauge.svelte  InputCoffeeWeight.svelte  InputPreinfusion.svelte  InputRatio.svelte  InputTotalTime.svelte  SettingsForm.svelte  StartButton.svelte  Title.svelte
src/store/: index.js
static/: browserconfig.xml  site.webmanifest
