[package]
name = "coffee_scale_firmware"
version = "0.1.0"
authors = ["beeb <hi@beeb.li>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", features = [
    "macros",
] }
hal = { package = "esp32-hal", version = "0.16.0", default-features = false, features = [
    "rt",
    "vectored",
    "xtal-26mhz",
] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.7.0", features = ["esp32", "log"] }
log = { version = "0.4.18" }
esp-wifi = { version = "0.1.1", features = ["esp32", "ble"] }
smoltcp = { version = "0.10.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
embedded-svc = { version = "0.26", default-features = false, features = [] }
embedded-io = "0.6"
heapless = { version = "0.8", default-features = false }
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
tinybmp = "0.5.0"
ssd1327-i2c = "0.2.0"
