[package]
name = "firmware-rs"
version = "0.1.0"
authors = ["beeb <hi@beeb.li>"]
edition = "2021"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47", default-features = false }
esp32-nimble = "0.4"
anyhow = "1"
loadcell = { git = "https://github.com/DaneSlattery/hx711.git", branch = "1-issue-with-multiple-tarings" }
ssd1306 = "0.8"
embedded-graphics = "0.8"
signalo_filters = "0.6.0"

[build-dependencies]
embuild = "0.31.3"
