[package]
name = "firmware-rs"
version = "0.1.0"
authors = ["beeb <hi@beeb.li>"]
edition = "2021"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = "1"
critical-section = "1"
embedded-graphics = "0.8"
esp-idf-svc = { version = "0.47" }
esp32-nimble = "0.4"
loadcell = { git = "https://github.com/beeb/hx711.git", branch = "critical-section" }
log = { version = "0.4", default-features = false }
signalo_filters = "0.6.0"
ssd1306 = "0.8"

[build-dependencies]
embuild = "0.31.3"
